# izidic

./: BUILD.bazel  LICENSE  README.md  WORKSPACE  deps.bzl  go.mod  izidic.go  izidic_test.go
.github/workflows/: codeql.yml  go.yml
examples/: demo.go
examples/di/: app.go  di.go
